samples/_failures_safe/1761722721_2de8d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0649d3a1.c: In function ‘main’:
./samples/SAFE/__tmp_0649d3a1.c:168:12: error: missing terminating " character
  168 |     printf("\nSecond matrix:\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0649d3a1.c:168:5: error: expected expression at end of input
  168 |     printf("\nSecond matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_0649d3a1.c:168:5: error: expected declaration or statement at end of input
